--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.2.2",
     "nodemailer": "^6.10.0",
